syntax = "proto3";

package go.micro.srv.PostHouses;

service Example {
    rpc PostHouses (Request) returns (Response) {
    }
}

message Message {
    string say = 1;
}

message Request {
    string Sessionid = 1;
    bytes Body = 2;
}

message Response {
    string Errno = 1;
    string Errmsg = 2;
    string Houses_id = 3;
}

message StreamingRequest {
    int64 count = 1;
}

message StreamingResponse {
    int64 count = 1;
}

message Ping {
    int64 stroke = 1;
}

message Pong {
    int64 stroke = 1;
}
